新增建表语句，修改实验环境