@@ -1,7 +1,7 @@
 package com.xue.spark;
 
 import org.apache.spark.sql.*;
-import org.apache.spark.sql.expressions.Window;
+import org.apache.spark.sql.api.java.UDF2;
 import org.apache.spark.sql.types.DataTypes;
 import org.apache.spark.sql.types.StructType;
 import static org.apache.spark.sql.functions.*;
@@ -14,19 +14,30 @@ import java.sql.Statement;
  * 勺嘴鹬 GPS 数据批处理分析器
  * 以 local[*] 模式运行，读取本地 CSV，通过 JDBC 将结果写入 MySQL。
  * 该程序作为批处理脚本运行一次，不涉及任何 Web 服务。
+ *
+ * 输出表：
+ *   migration_summary  - 迁徙总览
+ *   phase_stat         - 各阶段统计
+ *   track_point        - 抽稀轨迹点 (约4000条)
+ *   stopover           - 网格聚合停歇点
+ *   hourly_activity    - 昼夜飞行频次
+ *   scatter_data       - 速度-高度散点采样
  */
 public class SparkAnalyzer {
 
-    private static final String JDBC_URL = "jdbc:mysql://127.0.0.1:3306/k9track"
+    private static final String JDBC_URL = "jdbc:mysql://127.0.0.1:3307/k9track"
             + "?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai&characterEncoding=utf-8";
     private static final String JDBC_USER = "root";
     private static final String JDBC_PASSWORD = "root";
 
+    /** 半正矢公式：地球半径 (km) */
+    private static final double EARTH_RADIUS_KM = 6371.0;
+
     public static void main(String[] args) throws Exception {
-        // 0. 初始化 MySQL 数据库和表结构
+        // 0. 初始化数据库和表结构
         initDatabase();
 
-        // 1. 创建 SparkSession —— local[*] 利用本地所有 CPU 核心
+        // 1. 创建 SparkSession
         SparkSession spark = SparkSession.builder()
                 .appName("K9-Track-GPS-Analyzer")
                 .master("local[*]")
@@ -35,6 +46,19 @@ public class SparkAnalyzer {
                 .config("spark.sql.shuffle.partitions", "8")
                 .config("spark.driver.memory", "4g")
                 .config("spark.serializer", "org.apache.spark.serializer.KryoSerializer")
+                // JDK 17+ 模块访问兼容
+                .config("spark.driver.extraJavaOptions",
+                        "--add-opens=java.base/java.lang=ALL-UNNAMED "
+                        + "--add-opens=java.base/java.util=ALL-UNNAMED "
+                        + "--add-opens=java.base/java.nio=ALL-UNNAMED "
+                        + "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED "
+                        + "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED")
+                .config("spark.executor.extraJavaOptions",
+                        "--add-opens=java.base/java.lang=ALL-UNNAMED "
+                        + "--add-opens=java.base/java.util=ALL-UNNAMED "
+                        + "--add-opens=java.base/java.nio=ALL-UNNAMED "
+                        + "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED "
+                        + "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED")
                 .getOrCreate();
 
         spark.sparkContext().setLogLevel("WARN");
@@ -45,7 +69,20 @@ public class SparkAnalyzer {
         System.out.println("  Master: " + spark.sparkContext().master());
         System.out.println("===========================================");
 
-        // 2. 读取 CSV 数据
+        // 注册 Haversine UDF
+        spark.udf().register("haversine", (UDF2<Double, Double, Double, Double, Double>)
+                (lat1, lng1, lat2, lng2) -> {
+                    if (lat1 == null || lng1 == null || lat2 == null || lng2 == null) return 0.0;
+                    double dLat = Math.toRadians(lat2 - lat1);
+                    double dLng = Math.toRadians(lng2 - lng1);
+                    double a = Math.sin(dLat / 2) * Math.sin(dLat / 2)
+                            + Math.cos(Math.toRadians(lat1)) * Math.cos(Math.toRadians(lat2))
+                            * Math.sin(dLng / 2) * Math.sin(dLng / 2);
+                    double c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+                    return EARTH_RADIUS_KM * c;
+                }, DataTypes.DoubleType);
+
+        // 2. 读取 CSV
         String csvPath = SparkAnalyzer.class.getClassLoader()
                 .getResource("data/spoonbill_k9_gps.csv").getPath();
 
@@ -54,7 +91,7 @@ public class SparkAnalyzer {
                 .add("timestamp", DataTypes.StringType)
                 .add("latitude", DataTypes.DoubleType)
                 .add("longitude", DataTypes.DoubleType)
-                .add("altitude", DataTypes.IntegerType)
+                .add("altitude", DataTypes.DoubleType)
                 .add("speed_kmh", DataTypes.DoubleType)
                 .add("phase", DataTypes.StringType)
                 .add("point_type", DataTypes.StringType);
@@ -65,34 +102,37 @@ public class SparkAnalyzer {
                 .schema(schema)
                 .csv(csvPath);
 
-        // 解析时间戳
         df = df.withColumn("ts", to_timestamp(col("timestamp"), "yyyy-MM-dd HH:mm:ss"));
         df.cache();
 
         long totalCount = df.count();
         System.out.println("总记录数: " + totalCount);
 
-        // ========== 处理1: 轨迹抽稀 (Downsampling) ==========
-        System.out.println("\n[处理1] 轨迹抽稀 (point_id % 50 == 0)...");
+        // ========== 处理1: 轨迹抽稀 → track_point ==========
+        System.out.println("\n[处理1] 轨迹抽稀 (point_id % 50 == 0) → track_point");
         Dataset<Row> trackDF = df.filter(col("point_id").mod(50).equalTo(0))
                 .orderBy("timestamp")
-                .select(col("point_id"),
-                        col("longitude").as("lng"),
-                        col("latitude").as("lat"),
-                        col("timestamp"));
+                .select(
+                        col("point_id"),
+                        col("timestamp"),
+                        col("longitude"),
+                        col("latitude"),
+                        col("altitude"),
+                        col("speed_kmh"),
+                        col("phase"),
+                        col("point_type")
+                );
 
         long trackCount = trackDF.count();
         System.out.println("抽稀后轨迹点数: " + trackCount);
-        writeToMySQL(trackDF, "track_points");
+        writeToMySQL(trackDF, "track_point");
 
-        // ========== 处理2: 网格聚合识别停歇点 ==========
-        System.out.println("\n[处理2] 网格聚合识别停歇点...");
-        // 过滤 stopover 类型，按经纬度保留两位小数 (约1km网格) 分组
+        // ========== 处理2: 网格聚合停歇点 → stopover ==========
+        System.out.println("\n[处理2] 网格聚合停歇点 → stopover");
         Dataset<Row> stopoverDF = df.filter(col("point_type").equalTo("stopover"))
                 .withColumn("grid_lat", round(col("latitude"), 2))
                 .withColumn("grid_lng", round(col("longitude"), 2));
 
-        // 计算每个网格内最大/最小时间戳，停留时间 = 最大 - 最小 (小时)
         Dataset<Row> gridAgg = stopoverDF.groupBy("grid_lat", "grid_lng")
                 .agg(
                         min("ts").as("start_time"),
@@ -100,13 +140,12 @@ public class SparkAnalyzer {
                         count("point_id").as("point_count")
                 )
                 .withColumn("diff_hours",
-                        (col("end_time").cast("long").minus(col("start_time").cast("long")).divide(3600)))
-                // 只保留停留时间 > 48 小时的有效停歇点
+                        col("end_time").cast("long").minus(col("start_time").cast("long")).divide(3600))
                 .filter(col("diff_hours").gt(48))
                 .withColumn("stay_days", round(col("diff_hours").divide(24), 1))
                 .select(
-                        col("grid_lat").as("lat"),
-                        col("grid_lng").as("lng"),
+                        col("grid_lng").as("longitude"),
+                        col("grid_lat").as("latitude"),
                         col("start_time"),
                         col("end_time"),
                         col("stay_days")
@@ -114,48 +153,87 @@ public class SparkAnalyzer {
                 .orderBy(col("stay_days").desc());
 
         long stopoverCount = gridAgg.count();
-        System.out.println("有效停歇点数量 (停留>48h): " + stopoverCount);
-        writeToMySQL(gridAgg, "stopovers");
+        System.out.println("有效停歇点 (停留>48h): " + stopoverCount);
+        writeToMySQL(gridAgg, "stopover");
 
-        // ========== 处理3: 各阶段统计 ==========
-        System.out.println("\n[处理3] 各阶段统计...");
+        // ========== 处理3: 各阶段统计 → phase_stat ==========
+        System.out.println("\n[处理3] 各阶段统计 → phase_stat");
         Dataset<Row> phaseStats = df.groupBy("point_type")
                 .agg(
+                        count("point_id").as("point_count"),
                         round(avg("speed_kmh"), 2).as("avg_speed"),
                         round(max("speed_kmh"), 2).as("max_speed"),
-                        round(avg("altitude"), 1).as("avg_altitude"),
-                        count("point_id").as("record_count")
+                        round(avg("altitude"), 1).as("avg_altitude")
                 )
                 .withColumnRenamed("point_type", "phase")
                 .orderBy(col("phase"));
 
         phaseStats.show(false);
-        writeToMySQL(phaseStats, "phase_stats");
+        writeToMySQL(phaseStats, "phase_stat");
 
-        // ========== 处理4: 昼夜飞行习性 (按小时统计高速飞行) ==========
-        System.out.println("\n[处理4] 昼夜飞行习性分析...");
-        Dataset<Row> hourlyActivity = df
+        // ========== 处理4: 昼夜飞行习性 → hourly_activity ==========
+        System.out.println("\n[处理4] 昼夜飞行习性 → hourly_activity");
+        Dataset<Row> hourlyDF = df
                 .filter(col("speed_kmh").gt(20))
-                .withColumn("hour", hour(col("ts")))
-                .groupBy("hour")
-                .agg(count("point_id").as("count"))
-                .orderBy("hour");
+                .withColumn("hour_of_day", hour(col("ts")))
+                .groupBy("hour_of_day")
+                .agg(count("point_id").as("activity_count"))
+                .orderBy("hour_of_day");
 
-        hourlyActivity.show(24, false);
-        writeToMySQL(hourlyActivity, "hourly_activity");
+        hourlyDF.show(24, false);
+        writeToMySQL(hourlyDF, "hourly_activity");
 
-        // ========== 处理5: 高度-速度散点采样 ==========
-        System.out.println("\n[处理5] 高度-速度散点采样...");
-        Dataset<Row> scatterData = df
+        // ========== 处理5: 高度-速度散点采样 → scatter_data ==========
+        System.out.println("\n[处理5] 高度-速度散点采样 → scatter_data");
+        Dataset<Row> scatterDF = df
                 .filter(col("point_type").equalTo("migration"))
-                .select(col("speed_kmh").as("speed"),
-                        col("altitude").as("altitude"))
+                .select(col("speed_kmh"), col("altitude"))
                 .orderBy(rand())
                 .limit(2000);
 
-        long scatterCount = scatterData.count();
+        long scatterCount = scatterDF.count();
         System.out.println("散点采样数: " + scatterCount);
-        writeToMySQL(scatterData, "scatter_data");
+        writeToMySQL(scatterDF, "scatter_data");
+
+        // ========== 处理6: 迁徙总览 → migration_summary ==========
+        System.out.println("\n[处理6] 迁徙总览 → migration_summary");
+
+        // 总里程：对抽稀后的轨迹点，用 Haversine 计算相邻点距离并累加
+        Dataset<Row> trackWithLag = trackDF
+                .withColumn("prev_lat", lag("latitude", 1).over(org.apache.spark.sql.expressions.Window.orderBy("timestamp")))
+                .withColumn("prev_lng", lag("longitude", 1).over(org.apache.spark.sql.expressions.Window.orderBy("timestamp")));
+
+        double totalDistance = trackWithLag
+                .filter(col("prev_lat").isNotNull())
+                .agg(sum(callUDF("haversine", col("prev_lat"), col("prev_lng"), col("latitude"), col("longitude"))))
+                .head().getDouble(0);
+
+        // 平均速度和最高速度
+        Row speedRow = df.agg(avg("speed_kmh"), max("speed_kmh")).head();
+        double avgSpeed = speedRow.getDouble(0);
+        double maxSpeed = speedRow.getDouble(1);
+
+        // 总停歇天数
+        double totalStopoverDays = gridAgg.agg(sum("stay_days")).head().getDouble(0);
+
+        Dataset<Row> summaryDF = spark.createDataFrame(
+                java.util.Arrays.asList(
+                        org.apache.spark.sql.RowFactory.create(
+                                Math.round(totalDistance * 10.0) / 10.0,
+                                Math.round(avgSpeed * 100.0) / 100.0,
+                                Math.round(maxSpeed * 100.0) / 100.0,
+                                Math.round(totalStopoverDays * 10.0) / 10.0
+                        )
+                ),
+                new StructType()
+                        .add("total_distance", DataTypes.DoubleType)
+                        .add("avg_speed", DataTypes.DoubleType)
+                        .add("max_speed", DataTypes.DoubleType)
+                        .add("total_stopover_days", DataTypes.DoubleType)
+        );
+
+        summaryDF.show(false);
+        writeToMySQL(summaryDF, "migration_summary");
 
         // 清理缓存
         df.unpersist();
@@ -163,21 +241,22 @@ public class SparkAnalyzer {
 
         System.out.println("\n===========================================");
         System.out.println("  处理完成!");
+        System.out.println("  总里程: " + Math.round(totalDistance * 10.0) / 10.0 + " km");
+        System.out.println("  平均时速: " + Math.round(avgSpeed * 100.0) / 100.0 + " km/h");
+        System.out.println("  最快时速: " + Math.round(maxSpeed * 100.0) / 100.0 + " km/h");
+        System.out.println("  总停歇天数: " + Math.round(totalStopoverDays * 10.0) / 10.0 + " 天");
         System.out.println("  抽稀轨迹点: " + trackCount);
         System.out.println("  有效停歇点: " + stopoverCount);
         System.out.println("  散点采样数: " + scatterCount);
         System.out.println("===========================================");
     }
 
-    /**
-     * 将 DataFrame 通过 JDBC 写入 MySQL
-     */
+    /** 将 DataFrame 通过 JDBC 写入 MySQL */
     private static void writeToMySQL(Dataset<Row> df, String tableName) {
         java.util.Properties props = new java.util.Properties();
         props.put("user", JDBC_USER);
         props.put("password", JDBC_PASSWORD);
         props.put("driver", "com.mysql.cj.jdbc.Driver");
-        // 解决中文编码问题
         props.put("characterEncoding", "UTF-8");
         props.put("useUnicode", "true");
 
@@ -187,14 +266,11 @@ public class SparkAnalyzer {
         System.out.println("  已写入表: " + tableName + " (" + df.count() + " 条)");
     }
 
-    /**
-     * 初始化 MySQL 数据库和表结构
-     */
+    /** 初始化 MySQL 数据库和表结构 */
     private static void initDatabase() throws Exception {
-        String baseUrl = "jdbc:mysql://127.0.0.1:3306"
+        String baseUrl = "jdbc:mysql://127.0.0.1:3307"
                 + "?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai";
 
-        // 先连接无数据库的 URL 来创建数据库
         try (Connection conn = DriverManager.getConnection(baseUrl, JDBC_USER, JDBC_PASSWORD);
              Statement stmt = conn.createStatement()) {
 
@@ -203,59 +279,67 @@ public class SparkAnalyzer {
             System.out.println("数据库 k9track 已就绪");
         }
 
-        // 连接到 k9track 数据库创建表
         try (Connection conn = DriverManager.getConnection(JDBC_URL, JDBC_USER, JDBC_PASSWORD);
              Statement stmt = conn.createStatement()) {
 
-            // 轨迹抽稀点表
             stmt.executeUpdate(
-                    "CREATE TABLE IF NOT EXISTS track_points ("
-                    + "id BIGINT AUTO_INCREMENT PRIMARY KEY, "
-                    + "point_id INT, "
-                    + "lng DOUBLE, "
-                    + "lat DOUBLE, "
-                    + "timestamp VARCHAR(50)"
-                    + ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4");
+                    "CREATE TABLE IF NOT EXISTS migration_summary ("
+                    + "id INT AUTO_INCREMENT PRIMARY KEY, "
+                    + "total_distance DOUBLE COMMENT '总里程(km)', "
+                    + "avg_speed DOUBLE COMMENT '平均时速(km/h)', "
+                    + "max_speed DOUBLE COMMENT '最快时速(km/h)', "
+                    + "total_stopover_days DOUBLE COMMENT '总停歇天数', "
+                    + "update_time DATETIME DEFAULT CURRENT_TIMESTAMP COMMENT '更新时间'"
+                    + ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='迁徙总览表'");
 
-            // 停歇点表
             stmt.executeUpdate(
-                    "CREATE TABLE IF NOT EXISTS stopovers ("
-                    + "id BIGINT AUTO_INCREMENT PRIMARY KEY, "
-                    + "lat DOUBLE, "
-                    + "lng DOUBLE, "
-                    + "start_time VARCHAR(50), "
-                    + "end_time VARCHAR(50), "
-                    + "stay_days DOUBLE"
-                    + ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4");
+                    "CREATE TABLE IF NOT EXISTS phase_stat ("
+                    + "id INT AUTO_INCREMENT PRIMARY KEY, "
+                    + "phase VARCHAR(50) COMMENT '阶段名称', "
+                    + "point_count INT COMMENT '数据点数', "
+                    + "avg_speed DOUBLE COMMENT '平均时速', "
+                    + "max_speed DOUBLE COMMENT '最高时速', "
+                    + "avg_altitude DOUBLE COMMENT '平均海拔'"
+                    + ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='阶段统计表'");
 
-            // 各阶段统计表
             stmt.executeUpdate(
-                    "CREATE TABLE IF NOT EXISTS phase_stats ("
-                    + "id BIGINT AUTO_INCREMENT PRIMARY KEY, "
-                    + "phase VARCHAR(50), "
-                    + "avg_speed DOUBLE, "
-                    + "max_speed DOUBLE, "
-                    + "avg_altitude DOUBLE, "
-                    + "record_count INT"
-                    + ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4");
+                    "CREATE TABLE IF NOT EXISTS track_point ("
+                    + "id INT AUTO_INCREMENT PRIMARY KEY, "
+                    + "point_id INT COMMENT '原始点ID', "
+                    + "timestamp VARCHAR(50) COMMENT '时间戳', "
+                    + "longitude DOUBLE COMMENT '经度', "
+                    + "latitude DOUBLE COMMENT '纬度', "
+                    + "altitude DOUBLE COMMENT '海拔', "
+                    + "speed_kmh DOUBLE COMMENT '速度(km/h)', "
+                    + "phase VARCHAR(50) COMMENT '所属阶段', "
+                    + "point_type VARCHAR(50) COMMENT '记录类型'"
+                    + ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='抽稀轨迹表'");
 
-            // 每小时活动频次表
+            stmt.executeUpdate(
+                    "CREATE TABLE IF NOT EXISTS stopover ("
+                    + "id INT AUTO_INCREMENT PRIMARY KEY, "
+                    + "longitude DOUBLE COMMENT '中心经度', "
+                    + "latitude DOUBLE COMMENT '中心纬度', "
+                    + "start_time VARCHAR(50) COMMENT '抵达时间', "
+                    + "end_time VARCHAR(50) COMMENT '离开时间', "
+                    + "stay_days DOUBLE COMMENT '停留天数'"
+                    + ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='网格聚合停歇点表'");
+
             stmt.executeUpdate(
                     "CREATE TABLE IF NOT EXISTS hourly_activity ("
-                    + "id BIGINT AUTO_INCREMENT PRIMARY KEY, "
-                    + "hour INT, "
-                    + "count INT"
-                    + ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4");
+                    + "id INT AUTO_INCREMENT PRIMARY KEY, "
+                    + "hour_of_day INT COMMENT '小时(0-23)', "
+                    + "activity_count INT COMMENT '处于飞行状态的记录数'"
+                    + ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='昼夜活动频次表'");
 
-            // 散点数据表
             stmt.executeUpdate(
                     "CREATE TABLE IF NOT EXISTS scatter_data ("
-                    + "id BIGINT AUTO_INCREMENT PRIMARY KEY, "
-                    + "speed DOUBLE, "
-                    + "altitude DOUBLE"
-                    + ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4");
+                    + "id INT AUTO_INCREMENT PRIMARY KEY, "
+                    + "speed_kmh DOUBLE COMMENT '速度(km/h)', "
+                    + "altitude DOUBLE COMMENT '海拔(m)'"
+                    + ") ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='速度-高度散点采样表'");
 
-            System.out.println("数据表已就绪: track_points, stopovers, phase_stats, hourly_activity, scatter_data");
+            System.out.println("数据表已就绪: migration_summary, phase_stat, track_point, stopover, hourly_activity, scatter_data");
         }
     }
 }
